# ADHERE

./: .gitignore  README.md  TicketTrainer.txt  merge_files.py  pyproject.toml  xlsx_to_jsonl.py
Redactor/: anonymize.py  io_utils.py  main.py  monitoring.py  recognizers.py  reformat.py
SRC/: circuit_breaker.py  config.py  io_utils.py  llm_api.py  main.py  models.py  pipeline.py  sanity_check.py  shared_state.py  token_bucket.py  utils.py
